--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,7 +22,7 @@ body {
 
 #header {
     text-align: center;
-    padding: 10px;
+    padding: 15px;
 }
 h1, h3 {
     color: white;
@@ -30,8 +30,29 @@ h1, h3 {
 }
 
 h3 {
-    font-size: 16px;
+    font-size: 20px;
 }
+
+.gungsuh {
+    font-family: 'Gungsuh';
+}
+
+.navbar {
+    background-color: transparent;
+    background: transparent;
+    border-color: transparent;
+ }
+
+ a { 
+     color: white;
+     font-family: 'Dancing Script', cursive;
+ }
+
+ .nav-link { 
+     font-size: 30px;
+ }
+ 
+ .navbar li { color: #000 } 
 @media screen and (max-width: 640px) {
     
     #logo { 
