--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,6 +19,11 @@ body {
     height: auto;
     border-radius: 80px;
 }
+.img-menu {
+    text-align:center;
+    height: auto;
+    margin: 0 auto; 
+}
 
 #header {
     text-align: center;
@@ -27,6 +32,10 @@ body {
 h1, h3 {
     color: white;
     font-family: 'Dancing Script', cursive;
+}
+
+h2 {
+    color: white;
 }
 
 h3 {
@@ -78,6 +87,16 @@ h3 {
  .featured-items{
      text-align: center;
  }
+
+ .carousel-inner {
+     text-align:center; 
+ }
+
+ .img-menu {
+     margin: 10 0 10 0; 
+
+ }
+
 @media screen and (max-width: 640px) {
     
     #logo { 
